--- a/vast-tools.cabal
+++ b/vast-tools.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.34.4.
+-- This file has been generated from package.yaml by hpack version 0.34.5.
 --
 -- see: https://github.com/sol/hpack
 
@@ -55,10 +55,13 @@ library
     , lens
     , modern-uri
     , openapi3
-    , servant
+    , servant >=0.18.3
     , text
     , xml-conduit
     , xml-lens
+  if impl(ghc >= 9.0.0)
+    default-extensions:
+        ImpredicativeTypes
   default-language: Haskell2010
 
 test-suite vast-tools-test
@@ -79,9 +82,12 @@ test-suite vast-tools-test
     , lens
     , modern-uri
     , openapi3
-    , servant
+    , servant >=0.18.3
     , text
     , vast-tools
     , xml-conduit
     , xml-lens
+  if impl(ghc >= 9.0.0)
+    default-extensions:
+        ImpredicativeTypes
   default-language: Haskell2010
